added logging for yml

--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -54,6 +54,7 @@ jobs:
           static_site_generator: next
       - run: npm install
       - run: npm run build
+      - run: ls -la
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v1
         with:
