--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@radix-ui/themes": "^2.0.3",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.3.0",
