--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-loader-spinner": "^6.1.6"
+    "react-loader-spinner": "^6.1.6",
+    "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.3.0",
